--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: #ffffff;
+            color: #000000;
         }
 
         header {
-            background-color: #0044cc;
-            color: white;
+            background-color: #000000;
+            color: #ffffff;
             padding: 1rem 2rem;
             text-align: center;
         }
@@ -31,7 +32,7 @@
         }
 
         nav ul li a {
-            color: white;
+            color: #ffffff;
             text-decoration: none;
             font-weight: bold;
         }
@@ -41,15 +42,16 @@
         }
 
         .section {
-            background-color: white;
+            background-color: #f4f4f4;
             padding: 2rem;
             margin-bottom: 1rem;
             border-radius: 5px;
+            border: 1px solid #cccccc;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
 
         h2 {
-            color: #0044cc;
+            color: #ff6600;
         }
 
         .form-group {
@@ -64,27 +66,37 @@
         input, textarea, button {
             width: 100%;
             padding: 0.8rem;
-            border: 1px solid #ccc;
+            border: 1px solid #cccccc;
             border-radius: 4px;
         }
 
         button {
-            background-color: #0044cc;
+            background-color: #ff6600;
             color: white;
             font-weight: bold;
             cursor: pointer;
+            border: none;
         }
 
         button:hover {
-            background-color: #003399;
+            background-color: #cc5200;
         }
 
         footer {
-            background-color: #333;
-            color: white;
+            background-color: #000000;
+            color: #ffffff;
             text-align: center;
             padding: 1rem 0;
             margin-top: 2rem;
+        }
+
+        a {
+            color: #ff6600;
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
@@ -147,3 +159,4 @@
 
 </body>
 </html>
+
