--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Operations Department - Landing Page</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="operations/css/styles.css">
 </head>
 <body>
 
