--- a/maintenance.html
+++ b/maintenance.html
@@ -1,1 +1,33 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Maintenance - ANAVIA</title>
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+
+<header>
+    <h1>Maintenance</h1>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+        </ul>
+    </nav>
+</header>
+
+<div class="container">
+    <section class="section">
+        <h2>Maintenance Overview</h2>
+        <p>This section covers scheduled maintenance, equipment tracking, and overall aircraft health monitoring to prevent downtime.</p>
+    </section>
+</div>
+
+<footer>
+    <p>&copy; 2025 Operations Department - ANAVIA</p>
+</footer>
+
+</body>
+</html>
 
