--- a/index.html
+++ b/index.html
@@ -3,17 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Operations Department - Landing Page</title>
+    <title>Operations Department</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
 <header>
-    <div class="logo-container">
-       <img src="images/logo-anavia-long.png" alt="ANAVIA Logo" class="logo">
-        <h1>Operations Department</h1>
-    </div>
+<img src="images/logo-anavia-long.png" alt="ANAVIA Logo" class="logo">
+    <h1>Operations</h1>
     <nav>
         <ul>
             <li><a href="operations.html">Operations</a></li>
