--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <header>
 <img src="images/logo-anavia-long.png" alt="ANAVIA Logo" class="logo">
-    <h1>Operations</h1>
+    <h1>Operation Department</h1>
     <nav>
         <ul>
             <li><a href="operations.html">Operations</a></li>
