--- a/safety.html
+++ b/safety.html
@@ -9,10 +9,13 @@
 <body>
 
 <header>
+<img src="images/logo-anavia-long.png" alt="ANAVIA Logo" class="logo">
     <h1>Safety</h1>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
+            <li><a href="#overview">Overview</a></li>
+            <li><a href="#subpages">Subpages</a></li>
         </ul>
     </nav>
 </header>
