--- a/maintenance.html
+++ b/maintenance.html
@@ -3,20 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maintenance</title>
+    <title>Maintenance - Operation Department</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
 <header>
-<img src="images/logo-anavia-long.png" alt="ANAVIA Logo" class="logo">
-    <h1>Maintenance</h1>
+    <img src="images/logo-anavia-long.png" alt="ANAVIA Logo" class="logo">
+    <h1>Operation Department</h1>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="#overview">Overview</a></li>
-            <li><a href="#subpages">Subpages</a></li>
+            <li><a href="operations.html">Operations</a></li>
+            <li><a href="training.html">Training</a></li>
+            <li><a href="safety.html">Safety</a></li>
+            <li><a href="maintenance.html">Maintenance</a></li>
         </ul>
     </nav>
 </header>
@@ -29,9 +30,8 @@
 </div>
 
 <footer>
-    <p>&copy; 2025 Operations Department - ANAVIA</p>
+    <p>&copy; 2025 Operation Department - ANAVIA</p>
 </footer>
 
 </body>
 </html>
-
