--- a/safety.html
+++ b/safety.html
@@ -10,14 +10,13 @@
 <body>
 
 <header>
-    <img src="images/logo-anavia-long.png" alt="ANAVIA Logo" class="logo">
-    <h1>Operation Department</h1>
+<img src="images/logo-anavia-long.png" alt="ANAVIA Logo" class="logo">
+    <h1>Safety</h1>
     <nav>
         <ul>
-            <li><a href="operations.html">Operations</a></li>
-            <li><a href="training.html">Training</a></li>
-            <li><a href="safety.html">Safety</a></li>
-            <li><a href="maintenance.html">Maintenance</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#overview">Overview</a></li>
+            <li><a href="#subpages">Subpages</a></li>
         </ul>
     </nav>
 </header>
