--- a/training.html
+++ b/training.html
@@ -10,21 +10,38 @@
 <body>
 
 <header>
-<img src="images/logo-anavia-long.png" alt="ANAVIA Logo" class="logo">
+    <img src="images/logo-anavia-long.png" alt="ANAVIA Logo" class="logo">
     <h1>Training</h1>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="#overview">Overview</a></li>
-            <li><a href="#subpages">Subpages</a></li>
+            <li><a href="#training-manual">Training Manual</a></li>
+            <li><a href="#training-programs">Training Programs</a></li>
+            <li><a href="#reports-assessments">Reports and Assessments</a></li>
+            <li><a href="#courses-documents">Courses Documents</a></li>
         </ul>
     </nav>
 </header>
 
 <div class="container">
-    <section class="section">
-        <h2>Training Overview</h2>
-        <p>This section provides information on training schedules, pilot certifications, and ongoing development programs.</p>
+    <section id="training-manual" class="section">
+        <h2>Training Manual</h2>
+        <p>This section contains the comprehensive manual used during all training activities, providing guidelines, best practices, and procedures.</p>
+    </section>
+
+    <section id="training-programs" class="section">
+        <h2>Training Programs</h2>
+        <p>Details of all ongoing and upcoming training programs, including schedules, instructors, and key learning objectives.</p>
+    </section>
+
+    <section id="reports-assessments" class="section">
+        <h2>Reports and Assessments</h2>
+        <p>Access training reports and performance assessments to track progress and identify improvement areas.</p>
+    </section>
+
+    <section id="courses-documents" class="section">
+        <h2>Courses Documents</h2>
+        <p>Downloadable course materials, reference documents, and supplementary resources for all training modules.</p>
     </section>
 </div>
 
