--- a/safety.html
+++ b/safety.html
@@ -6,25 +6,56 @@
     <title>Safety - Operation Department</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
+    <style>
+        .section {
+            background-color: #f2f2f2;
+            padding: 20px;
+            margin-bottom: 20px;
+            border-left: 5px solid #FFA500;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        .section h2 {
+            color: #FFA500;
+        }
+    </style>
 </head>
 <body>
 
 <header>
-<img src="images/logo-anavia-long.png" alt="ANAVIA Logo" class="logo">
+    <img src="images/logo-anavia-long.png" alt="ANAVIA Logo" class="logo">
     <h1>Safety</h1>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="#overview">Overview</a></li>
-            <li><a href="#subpages">Subpages</a></li>
+            <li><a href="#safety-management-manual">Safety Management Manual</a></li>
+            <li><a href="#compliance-manual">Compliance Manual</a></li>
+            <li><a href="#ftl-policy">FTL Policy</a></li>
+            <li><a href="#safety-documents">Safety Documents</a></li>
         </ul>
     </nav>
 </header>
 
 <div class="container">
-    <section class="section">
-        <h2>Safety Overview</h2>
-        <p>This section focuses on safety protocols, incident management, and continuous improvement to ensure safe operations.</p>
+    <section id="safety-management-manual" class="section">
+        <h2>Safety Management Manual</h2>
+        <p>This section provides the core principles and processes related to safety management across all operations.</p>
+    </section>
+
+    <section id="compliance-manual" class="section">
+        <h2>Compliance Manual</h2>
+        <p>Details about compliance standards, regulations, and procedures necessary to ensure operational safety and legal adherence.</p>
+    </section>
+
+    <section id="ftl-policy" class="section">
+        <h2>FTL Policy</h2>
+        <p>Flight Time Limitations (FTL) policies that govern crew rest, duty times, and operational readiness to maintain safety.</p>
+    </section>
+
+    <section id="safety-documents" class="section">
+        <h2>Safety Documents</h2>
+        <p>Access important safety documents, checklists, and guidelines used in daily operations to support safety standards.</p>
     </section>
 </div>
 
