--- a/maintenance.html
+++ b/maintenance.html
@@ -6,25 +6,56 @@
     <title>Maintenance - Operation Department</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
+    <style>
+        .section {
+            background-color: #f2f2f2;
+            padding: 20px;
+            margin-bottom: 20px;
+            border-left: 5px solid #FFA500;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        .section h2 {
+            color: #FFA500;
+        }
+    </style>
 </head>
 <body>
 
 <header>
-<img src="images/logo-anavia-long.png" alt="ANAVIA Logo" class="logo">
+    <img src="images/logo-anavia-long.png" alt="ANAVIA Logo" class="logo">
     <h1>Maintenance</h1>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="#overview">Overview</a></li>
-            <li><a href="#subpages">Subpages</a></li>
+            <li><a href="#maintenance-manual">Maintenance Manual</a></li>
+            <li><a href="#maintenance-logs">Maintenance Logs</a></li>
+            <li><a href="#configuration-report">Configuration Report</a></li>
+            <li><a href="#fleet-management">Fleet Management</a></li>
         </ul>
     </nav>
 </header>
 
 <div class="container">
-    <section class="section">
-        <h2>Maintenance Overview</h2>
-        <p>This section covers scheduled maintenance, equipment tracking, and overall aircraft health monitoring to prevent downtime.</p>
+    <section id="maintenance-manual" class="section">
+        <h2>Maintenance Manual</h2>
+        <p>This section provides guidelines and procedures for scheduled and unscheduled maintenance activities.</p>
+    </section>
+
+    <section id="maintenance-logs" class="section">
+        <h2>Maintenance Logs</h2>
+        <p>Access records of past maintenance, inspections, and repairs conducted on all fleet equipment.</p>
+    </section>
+
+    <section id="configuration-report" class="section">
+        <h2>Configuration Report</h2>
+        <p>Details of current configurations, modifications, and updates to the aircraft and its components.</p>
+    </section>
+
+    <section id="fleet-management" class="section">
+        <h2>Fleet Management</h2>
+        <p>Overview of the entire fleet, including status, availability, and upcoming maintenance schedules.</p>
     </section>
 </div>
 
