--- a/operations.html
+++ b/operations.html
@@ -6,33 +6,68 @@
     <title>Operations</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
+    <style>
+        .section {
+            background-color: #f2f2f2;
+            padding: 20px;
+            margin-bottom: 20px;
+            border-left: 5px solid #FFA500;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        .section h2 {
+            color: #FFA500;
+        }
+    </style>
 </head>
 <body>
 
 <header>
-<img src="images/logo-anavia-long.png" alt="ANAVIA Logo" class="logo">
+    <img src="images/logo-anavia-long.png" alt="ANAVIA Logo" class="logo">
     <h1>Operations</h1>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="#overview">Overview</a></li>
-            <li><a href="#subpages">Subpages</a></li>
+            <li><a href="#flight-manual">Flight Manual</a></li>
+            <li><a href="#system-description">System Description</a></li>
+            <li><a href="#flight-log">Flight Log</a></li>
+            <li><a href="#test-validations">Test & Validations</a></li>
+            <li><a href="#flight-tools">Flight Tools</a></li>
+            <li><a href="#documents">Documents</a></li>
         </ul>
     </nav>
 </header>
 
 <div class="container">
-    <section class="section" id="overview">
-        <h2>Operations Overview</h2>
-        <p>This section focuses on mission planning, flight scheduling, and operational reporting to ensure smooth and efficient UAV operations.</p>
+    <section id="flight-manual" class="section">
+        <h2>Flight Manual</h2>
+        <p>This section contains the operational flight manual, including flight procedures, safety measures, and emergency protocols.</p>
     </section>
 
-    <section class="section" id="subpages">
-        <h2>Subpages</h2>
-        <ul>
-            <li><a href="subpages/operations/reports.html">Mission Reports</a></li>
-            <li><a href="subpages/operations/flight-planning.html">Flight Planning</a></li>
-        </ul>
+    <section id="system-description" class="section">
+        <h2>System Description</h2>
+        <p>Detailed descriptions of the aircraft systems, components, and their functionality to support mission success.</p>
+    </section>
+
+    <section id="flight-log" class="section">
+        <h2>Flight Log</h2>
+        <p>Access logs of completed flights, including mission data, performance, and any incidents recorded during operations.</p>
+    </section>
+
+    <section id="test-validations" class="section">
+        <h2>Test & Validations</h2>
+        <p>Records of system tests, validations, and performance evaluations to ensure operational reliability.</p>
+    </section>
+
+    <section id="flight-tools" class="section">
+        <h2>Flight Tools</h2>
+        <p>Tools and resources used during flight operations, including planning software, navigation aids, and communication devices.</p>
+    </section>
+
+    <section id="documents" class="section">
+        <h2>Documents</h2>
+        <p>Essential operational documents, including checklists, reference materials, and regulatory compliance forms.</p>
     </section>
 </div>
 
