--- a/operations.html
+++ b/operations.html
@@ -28,13 +28,47 @@
     <h1>Operations</h1>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="#flight-manual">Flight Manual</a></li>
-            <li><a href="#system-description">System Description</a></li>
-            <li><a href="#flight-log">Flight Log</a></li>
-            <li><a href="#test-validations">Test & Validations</a></li>
-            <li><a href="#flight-tools">Flight Tools</a></li>
-            <li><a href="#documents">Documents</a></li>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="operations.html">Operations</a>
+                <ul>
+                    <li><a href="#flight-manual">Flight Manual</a></li>
+                    <li><a href="#system-description">System Description</a></li>
+                    <li><a href="#flight-log">Flight Log</a></li>
+                    <li><a href="#test-validations">Test & Validations</a></li>
+                    <li><a href="#flight-tools">Flight Tools</a></li>
+                    <li><a href="#documents">Documents</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="training.html">Training</a>
+                <ul>
+                    <li><a href="training.html#training-manual">Training Manual</a></li>
+                    <li><a href="training.html#training-programs">Training Programs</a></li>
+                    <li><a href="training.html#reports-assessments">Reports and Assessments</a></li>
+                    <li><a href="training.html#courses-documents">Courses Documents</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="safety.html">Safety</a>
+                <ul>
+                    <li><a href="safety.html#safety-management-manual">Safety Management Manual</a></li>
+                    <li><a href="safety.html#compliance-manual">Compliance Manual</a></li>
+                    <li><a href="safety.html#ftl-policy">FTL Policy</a></li>
+                    <li><a href="safety.html#safety-documents">Safety Documents</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="maintenance.html">Maintenance</a>
+                <ul>
+                    <li><a href="maintenance.html#maintenance-manual">Maintenance Manual</a></li>
+                    <li><a href="maintenance.html#maintenance-logs">Maintenance Logs</a></li>
+                    <li><a href="maintenance.html#configuration-report">Configuration Report</a></li>
+                    <li><a href="maintenance.html#fleet-management">Fleet Management</a></li>
+                </ul>
+            </li>
         </ul>
     </nav>
 </header>
