--- a/training.html
+++ b/training.html
@@ -28,11 +28,47 @@
     <h1>Training</h1>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="#training-manual">Training Manual</a></li>
-            <li><a href="#training-programs">Training Programs</a></li>
-            <li><a href="#reports-assessments">Reports and Assessments</a></li>
-            <li><a href="#courses-documents">Courses Documents</a></li>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="operations.html">Operations</a>
+                <ul>
+                    <li><a href="operations.html#flight-manual">Flight Manual</a></li>
+                    <li><a href="operations.html#system-description">System Description</a></li>
+                    <li><a href="operations.html#flight-log">Flight Log</a></li>
+                    <li><a href="operations.html#test-validations">Test & Validations</a></li>
+                    <li><a href="operations.html#flight-tools">Flight Tools</a></li>
+                    <li><a href="operations.html#documents">Documents</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="training.html">Training</a>
+                <ul>
+                    <li><a href="#training-manual">Training Manual</a></li>
+                    <li><a href="#training-programs">Training Programs</a></li>
+                    <li><a href="#reports-assessments">Reports and Assessments</a></li>
+                    <li><a href="#courses-documents">Courses Documents</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="safety.html">Safety</a>
+                <ul>
+                    <li><a href="safety.html#safety-management-manual">Safety Management Manual</a></li>
+                    <li><a href="safety.html#compliance-manual">Compliance Manual</a></li>
+                    <li><a href="safety.html#ftl-policy">FTL Policy</a></li>
+                    <li><a href="safety.html#safety-documents">Safety Documents</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="maintenance.html">Maintenance</a>
+                <ul>
+                    <li><a href="maintenance.html#maintenance-manual">Maintenance Manual</a></li>
+                    <li><a href="maintenance.html#maintenance-logs">Maintenance Logs</a></li>
+                    <li><a href="maintenance.html#configuration-report">Configuration Report</a></li>
+                    <li><a href="maintenance.html#fleet-management">Fleet Management</a></li>
+                </ul>
+            </li>
         </ul>
     </nav>
 </header>
