--- a/safety.html
+++ b/safety.html
@@ -28,9 +28,7 @@
     <h1>Safety</h1>
     <nav>
         <ul>
-            <li>
-                <a href="index.html">Home</a>
-            </li>
+            <li><a href="index.html">Home</a></li>
             <li>
                 <a href="operations.html">Operations</a>
                 <ul>
