--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <header>
     <img src="images/logo-anavia-long.png" alt="ANAVIA Logo" class="logo">
     <h1>Operations Department</h1>
+    <div class="menu-toggle" id="mobile-menu">☰</div>
     <nav>
         <ul>
             <li>
@@ -74,6 +75,15 @@
 <footer>
     <p>&copy; 2025 Operations Department - ANAVIA</p>
 </footer>
+
+<script>
+    const mobileMenu = document.getElementById('mobile-menu');
+    const navList = document.querySelector('nav ul');
+
+    mobileMenu.addEventListener('click', () => {
+        navList.classList.toggle('open');
+    });
+</script>
 
 </body>
 </html>
