--- a/index.html
+++ b/index.html
@@ -78,8 +78,16 @@
 
 <script>
     function toggleMenu() {
-        document.querySelector('nav ul').classList.toggle('active');
+        const nav = document.querySelector('nav ul');
+        nav.classList.toggle('active');
     }
+
+    // Fechar o menu ao selecionar um link
+    document.querySelectorAll('nav ul li a').forEach(link => {
+        link.addEventListener('click', () => {
+            document.querySelector('nav ul').classList.remove('active');
+        });
+    });
 </script>
 
 </body>
