--- a/training.html
+++ b/training.html
@@ -24,15 +24,17 @@
 <body>
 
 <header>
-    <img src="images/logo-anavia-long.png" alt="ANAVIA Logo" class="logo">
-    <h1>Training</h1>
-    <div class="menu-toggle" id="mobile-menu">☰</div>
+    <div class="header-content">
+        <img src="images/logo-anavia-long.png" alt="ANAVIA Logo" class="logo">
+        <h1>Training</h1>
+    </div>
+    <div class="menu-toggle" onclick="toggleMenu()">&#9776;</div>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li>
                 <a href="operations.html">Operations</a>
-                <ul>
+                <ul class="submenu">
                     <li><a href="operations.html#flight-manual">Flight Manual</a></li>
                     <li><a href="operations.html#system-description">System Description</a></li>
                     <li><a href="operations.html#flight-log">Flight Log</a></li>
@@ -43,7 +45,7 @@
             </li>
             <li>
                 <a href="training.html">Training</a>
-                <ul>
+                <ul class="submenu">
                     <li><a href="#training-manual">Training Manual</a></li>
                     <li><a href="#training-programs">Training Programs</a></li>
                     <li><a href="#reports-assessments">Reports and Assessments</a></li>
@@ -52,7 +54,7 @@
             </li>
             <li>
                 <a href="safety.html">Safety</a>
-                <ul>
+                <ul class="submenu">
                     <li><a href="safety.html#safety-management-manual">Safety Management Manual</a></li>
                     <li><a href="safety.html#compliance-manual">Compliance Manual</a></li>
                     <li><a href="safety.html#ftl-policy">FTL Policy</a></li>
@@ -61,7 +63,7 @@
             </li>
             <li>
                 <a href="maintenance.html">Maintenance</a>
-                <ul>
+                <ul class="submenu">
                     <li><a href="maintenance.html#maintenance-manual">Maintenance Manual</a></li>
                     <li><a href="maintenance.html#maintenance-logs">Maintenance Logs</a></li>
                     <li><a href="maintenance.html#configuration-report">Configuration Report</a></li>
@@ -99,12 +101,9 @@
 </footer>
 
 <script>
-    const mobileMenu = document.getElementById('mobile-menu');
-    const navList = document.querySelector('nav ul');
-
-    mobileMenu.addEventListener('click', () => {
-        navList.classList.toggle('open');
-    });
+    function toggleMenu() {
+        document.querySelector('nav ul').classList.toggle('active');
+    }
 </script>
 
 </body>
