--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Operations, Training, Safety, and Maintenance for ANAVIA's UAV operations.">
+    <meta name="keywords" content="UAV, ANAVIA, Operations, Training, Safety, Maintenance, Drones">
     <title>Operations Department</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
 
@@ -15,9 +18,10 @@
     <div class="menu-toggle" onclick="toggleMenu()">&#9776;</div>
     <nav>
         <ul>
+            <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
             <li>
-                <a href="operations.html">Operations</a>
-                <ul class="submenu">
+                <a href="operations.html"><i class="fas fa-cogs"></i> Operations</a>
+                <ul>
                     <li><a href="operations.html#flight-manual">Flight Manual</a></li>
                     <li><a href="operations.html#system-description">System Description</a></li>
                     <li><a href="operations.html#flight-log">Flight Log</a></li>
@@ -27,8 +31,8 @@
                 </ul>
             </li>
             <li>
-                <a href="training.html">Training</a>
-                <ul class="submenu">
+                <a href="training.html"><i class="fas fa-book-open"></i> Training</a>
+                <ul>
                     <li><a href="training.html#training-manual">Training Manual</a></li>
                     <li><a href="training.html#training-programs">Training Programs</a></li>
                     <li><a href="training.html#reports-assessments">Reports and Assessments</a></li>
@@ -36,8 +40,8 @@
                 </ul>
             </li>
             <li>
-                <a href="safety.html">Safety</a>
-                <ul class="submenu">
+                <a href="safety.html"><i class="fas fa-shield-alt"></i> Safety</a>
+                <ul>
                     <li><a href="safety.html#safety-management-manual">Safety Management Manual</a></li>
                     <li><a href="safety.html#compliance-manual">Compliance Manual</a></li>
                     <li><a href="safety.html#ftl-policy">FTL Policy</a></li>
@@ -45,8 +49,8 @@
                 </ul>
             </li>
             <li>
-                <a href="maintenance.html">Maintenance</a>
-                <ul class="submenu">
+                <a href="maintenance.html"><i class="fas fa-wrench"></i> Maintenance</a>
+                <ul>
                     <li><a href="maintenance.html#maintenance-manual">Maintenance Manual</a></li>
                     <li><a href="maintenance.html#maintenance-logs">Maintenance Logs</a></li>
                     <li><a href="maintenance.html#configuration-report">Configuration Report</a></li>
@@ -72,6 +76,8 @@
     </section>
 </div>
 
+<button id="back-to-top" onclick="scrollToTop()">⬆️</button>
+
 <footer>
     <p>&copy; 2025 Operations Department - ANAVIA</p>
 </footer>
@@ -81,13 +87,48 @@
         document.querySelector('nav ul').classList.toggle('active');
     }
 
-    // Fechar o menu ao selecionar um link
-    document.querySelectorAll('nav ul li a').forEach(link => {
-        link.addEventListener('click', () => {
-            document.querySelector('nav ul').classList.remove('active');
+    const backToTopButton = document.getElementById('back-to-top');
+
+    window.onscroll = function () {
+        if (document.body.scrollTop > 300 || document.documentElement.scrollTop > 300) {
+            backToTopButton.style.display = "block";
+        } else {
+            backToTopButton.style.display = "none";
+        }
+    };
+
+    function scrollToTop() {
+        window.scrollTo({ top: 0, behavior: 'smooth' });
+    }
+
+    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+        anchor.addEventListener('click', function (e) {
+            e.preventDefault();
+            document.querySelector(this.getAttribute('href')).scrollIntoView({
+                behavior: 'smooth'
+            });
         });
     });
 </script>
+
+<style>
+    #back-to-top {
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        background-color: #FFA500;
+        color: white;
+        border: none;
+        padding: 10px;
+        border-radius: 50%;
+        cursor: pointer;
+        display: none;
+    }
+
+    #back-to-top:hover {
+        background-color: #e69500;
+    }
+</style>
 
 </body>
 </html>
