--- a/maintenance.html
+++ b/maintenance.html
@@ -6,6 +6,7 @@
     <title>Maintenance - Operation Department</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         .section {
             background-color: #f2f2f2;
@@ -31,13 +32,13 @@
 <header>
     <img src="images/logo-anavia-long.png" alt="ANAVIA Logo" class="logo">
     <h1>Maintenance</h1>
-    <div class="menu-toggle" id="mobile-menu">☰</div>
+    <div class="menu-toggle" id="mobile-menu">&#9776;</div>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
             <li>
-                <a href="operations.html">Operations</a>
-                <ul>
+                <a href="operations.html"><i class="fas fa-cogs"></i> Operations</a>
+                <ul class="submenu">
                     <li><a href="operations.html#flight-manual">Flight Manual</a></li>
                     <li><a href="operations.html#system-description">System Description</a></li>
                     <li><a href="operations.html#flight-log">Flight Log</a></li>
@@ -47,8 +48,8 @@
                 </ul>
             </li>
             <li>
-                <a href="training.html">Training</a>
-                <ul>
+                <a href="training.html"><i class="fas fa-book-open"></i> Training</a>
+                <ul class="submenu">
                     <li><a href="training.html#training-manual">Training Manual</a></li>
                     <li><a href="training.html#training-programs">Training Programs</a></li>
                     <li><a href="training.html#reports-assessments">Reports and Assessments</a></li>
@@ -56,8 +57,8 @@
                 </ul>
             </li>
             <li>
-                <a href="safety.html">Safety</a>
-                <ul>
+                <a href="safety.html"><i class="fas fa-shield-alt"></i> Safety</a>
+                <ul class="submenu">
                     <li><a href="safety.html#safety-management-manual">Safety Management Manual</a></li>
                     <li><a href="safety.html#compliance-manual">Compliance Manual</a></li>
                     <li><a href="safety.html#ftl-policy">FTL Policy</a></li>
@@ -65,8 +66,8 @@
                 </ul>
             </li>
             <li>
-                <a href="maintenance.html">Maintenance</a>
-                <ul>
+                <a href="maintenance.html"><i class="fas fa-wrench"></i> Maintenance</a>
+                <ul class="submenu">
                     <li><a href="#maintenance-manual">Maintenance Manual</a></li>
                     <li><a href="#maintenance-logs">Maintenance Logs</a></li>
                     <li><a href="#configuration-report">Configuration Report</a></li>
@@ -99,18 +100,50 @@
     </section>
 </div>
 
+<button id="back-to-top" onclick="scrollToTop()">⬆️</button>
+
 <footer>
     <p>&copy; 2025 Operation Department - ANAVIA</p>
 </footer>
 
 <script>
-    const mobileMenu = document.getElementById('mobile-menu');
-    const navList = document.querySelector('nav ul');
+    function toggleMenu() {
+        document.querySelector('nav ul').classList.toggle('active');
+    }
 
-    mobileMenu.addEventListener('click', () => {
-        navList.classList.toggle('open');
-    });
+    const backToTopButton = document.getElementById('back-to-top');
+
+    window.onscroll = function () {
+        if (document.body.scrollTop > 300 || document.documentElement.scrollTop > 300) {
+            backToTopButton.style.display = "block";
+        } else {
+            backToTopButton.style.display = "none";
+        }
+    };
+
+    function scrollToTop() {
+        window.scrollTo({ top: 0, behavior: 'smooth' });
+    }
 </script>
+
+<style>
+    #back-to-top {
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        background-color: #FFA500;
+        color: white;
+        border: none;
+        padding: 10px;
+        border-radius: 50%;
+        cursor: pointer;
+        display: none;
+    }
+
+    #back-to-top:hover {
+        background-color: #e69500;
+    }
+</style>
 
 </body>
 </html>
