--- a/operations.html
+++ b/operations.html
@@ -6,6 +6,7 @@
     <title>Operations - Operation Department</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         .section {
             background-color: #f2f2f2;
@@ -24,27 +25,25 @@
 <body>
 
 <header>
-    <div class="header-content">
-        <img src="images/logo-anavia-long.png" alt="ANAVIA Logo" class="logo">
-        <h1>Operations</h1>
-    </div>
+    <img src="images/logo-anavia-long.png" alt="ANAVIA Logo" class="logo">
+    <h1>Operations</h1>
     <div class="menu-toggle" onclick="toggleMenu()">&#9776;</div>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
             <li>
-                <a href="operations.html">Operations</a>
+                <a href="operations.html"><i class="fas fa-cogs"></i> Operations</a>
                 <ul class="submenu">
-                    <li><a href="operations.html#flight-manual">Flight Manual</a></li>
-                    <li><a href="operations.html#system-description">System Description</a></li>
-                    <li><a href="operations.html#flight-log">Flight Log</a></li>
-                    <li><a href="operations.html#test-validations">Test & Validations</a></li>
-                    <li><a href="operations.html#flight-tools">Flight Tools</a></li>
-                    <li><a href="operations.html#documents">Documents</a></li>
+                    <li><a href="#flight-manual">Flight Manual</a></li>
+                    <li><a href="#system-description">System Description</a></li>
+                    <li><a href="#flight-log">Flight Log</a></li>
+                    <li><a href="#test-validations">Test & Validations</a></li>
+                    <li><a href="#flight-tools">Flight Tools</a></li>
+                    <li><a href="#documents">Documents</a></li>
                 </ul>
             </li>
             <li>
-                <a href="training.html">Training</a>
+                <a href="training.html"><i class="fas fa-book-open"></i> Training</a>
                 <ul class="submenu">
                     <li><a href="training.html#training-manual">Training Manual</a></li>
                     <li><a href="training.html#training-programs">Training Programs</a></li>
@@ -53,7 +52,7 @@
                 </ul>
             </li>
             <li>
-                <a href="safety.html">Safety</a>
+                <a href="safety.html"><i class="fas fa-shield-alt"></i> Safety</a>
                 <ul class="submenu">
                     <li><a href="safety.html#safety-management-manual">Safety Management Manual</a></li>
                     <li><a href="safety.html#compliance-manual">Compliance Manual</a></li>
@@ -62,7 +61,7 @@
                 </ul>
             </li>
             <li>
-                <a href="maintenance.html">Maintenance</a>
+                <a href="maintenance.html"><i class="fas fa-wrench"></i> Maintenance</a>
                 <ul class="submenu">
                     <li><a href="maintenance.html#maintenance-manual">Maintenance Manual</a></li>
                     <li><a href="maintenance.html#maintenance-logs">Maintenance Logs</a></li>
@@ -106,6 +105,8 @@
     </section>
 </div>
 
+<button id="back-to-top" onclick="scrollToTop()">⬆️</button>
+
 <footer>
     <p>&copy; 2025 Operation Department - ANAVIA</p>
 </footer>
@@ -114,7 +115,40 @@
     function toggleMenu() {
         document.querySelector('nav ul').classList.toggle('active');
     }
+
+    const backToTopButton = document.getElementById('back-to-top');
+
+    window.onscroll = function () {
+        if (document.body.scrollTop > 300 || document.documentElement.scrollTop > 300) {
+            backToTopButton.style.display = "block";
+        } else {
+            backToTopButton.style.display = "none";
+        }
+    };
+
+    function scrollToTop() {
+        window.scrollTo({ top: 0, behavior: 'smooth' });
+    }
 </script>
+
+<style>
+    #back-to-top {
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        background-color: #FFA500;
+        color: white;
+        border: none;
+        padding: 10px;
+        border-radius: 50%;
+        cursor: pointer;
+        display: none;
+    }
+
+    #back-to-top:hover {
+        background-color: #e69500;
+    }
+</style>
 
 </body>
 </html>
