--- a/index.html
+++ b/index.html
@@ -101,33 +101,56 @@
     function scrollToTop() {
         window.scrollTo({ top: 0, behavior: 'smooth' });
     }
-
-    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-        anchor.addEventListener('click', function (e) {
-            e.preventDefault();
-            document.querySelector(this.getAttribute('href')).scrollIntoView({
-                behavior: 'smooth'
-            });
-        });
-    });
 </script>
 
 <style>
+    /* Estilização corrigida para o menu */
+    nav ul {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    nav ul li {
+        position: relative;
+    }
+
+    nav ul li a {
+        color: #ffffff;
+        padding: 10px 15px;
+        text-decoration: none;
+    }
+
+    nav ul li:hover > .submenu {
+        display: block;
+    }
+
+    .submenu {
+        display: none;
+        position: absolute;
+        background-color: #333;
+        padding: 10px;
+        border-radius: 5px;
+        top: 100%;
+        left: 0;
+    }
+
+    .submenu li {
+        padding: 5px 0;
+    }
+
     #back-to-top {
         position: fixed;
         bottom: 20px;
         right: 20px;
         background-color: #FFA500;
         color: white;
-        border: none;
         padding: 10px;
         border-radius: 50%;
-        cursor: pointer;
         display: none;
-    }
-
-    #back-to-top:hover {
-        background-color: #e69500;
+        cursor: pointer;
     }
 </style>
 
