--- a/index.html
+++ b/index.html
@@ -133,6 +133,10 @@
     #back-to-top:hover {
         background-color: #e69500;
     }
+
+    .container {
+        margin-top: 150px;
+    }
 </style>
 
 </body>
